# Automated-ETL-Pipeline-Suite.-

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  Untitled10.ipynb  config.py  docker-compose.yml  pipeline.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: verify.yml
docs/adr/: 0001-domain-agnostic-library.md
etl_pipeline/: __init__.py  hooks.py  library.py  lineage.py  middleware.py  pipeline.py  plugins.py
etl_pipeline/extractors/: __init__.py  api.py  database.py
etl_pipeline/transformers/: clean.py
examples/: async_extraction.py  users_orders.py
extractor/: __init__.py  api_extractor.py  base_extractor.py  db_extractor.py  playwright_extractor.py  web_extractor.py
loader/: __init__.py  base_loader.py  csv_loader.py  s3_loader.py  sqlite_loader.py
src/etl_pipeline/: __init__.py  base.py  checkpoint.py  config.py  exceptions.py  flow_control.py  loaders.py  observability.py  results.py  schema.py
src/etl_pipeline/extractors/: __init__.py  playwright.py  web.py
src/etl_pipeline/transformers/: __init__.py  clean.py  mapper.py
src/etl_pipeline/validator/: __init__.py  base.py  id_validator.py  schema_validator.py
tests/: conftest.py  test_base_extractor_resilience.py  test_extractors_real_sources.py  test_generic_pipeline.py  test_library_api.py  test_loader.py  test_property_cleaner.py  test_transformer.py  test_validator.py
transformer/: __init__.py  base_transformer.py  cleaner.py  mapper.py
validator/: __init__.py  base_validator.py  id_validator.py  schema_validator.py
