[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "etl-pipeline"
version = "0.2.0"
description = "Domain-agnostic ETL pipeline library with sync/async execution."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "ETL Pipeline Contributors"}]
dependencies = [
  "pandas>=2.2.0",
  "requests>=2.31.0",
  "SQLAlchemy>=2.0.0",
  "PyYAML>=6.0.1",
]

[project.optional-dependencies]
web = ["playwright>=1.42.0", "beautifulsoup4>=4.12.0", "lxml>=5.1.0"]
s3 = ["boto3>=1.34.0"]
async = ["aiohttp>=3.10.0", "aiosqlite>=0.20.0", "asyncpg>=0.29.0"]
test = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "hypothesis>=6.112.0"]
dev = ["black>=24.0.0", "ruff>=0.11.0", "mypy>=1.15.0", "pre-commit>=3.6.0"]

[project.scripts]
etl-pipeline = "etl_pipeline.library:run_etl"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["etl_pipeline*"]
